--- a/package.json
+++ b/package.json
@@ -16,17 +16,16 @@
   "scripts": {
     "build": "lerna run build",
     "clean": "lerna clean && lerna run clean",
-    "format": "prettier --list-different \"./**/*.{ts,js,json,md}\"",
-    "format:fix": "prettier --write \"./**/*.{ts,js,json,md}\"",
+    "format:check": "prettier --list-different \"./**/*.{ts,js,json,md}\"",
+    "format": "prettier --write \"./**/*.{ts,js,json,md}\"",
     "lint": "eslint . --ext .js,.ts",
     "lint:fix": "eslint . --ext .js,.ts --fix",
-    "pre-commit": "yarn lint-staged",
-    "pre-push": "yarn format-check",
+    "pre-push": "yarn lint && yarn format:check",
     "postinstall": "lerna bootstrap && yarn build && lerna link",
     "test": "lerna run test --concurrency 1"
   },
   "devDependencies": {
-    "@vtex/prettier-config": "^0.0.1",
+    "@vtex/prettier-config": "file:packages/prettier-config/",
     "eslint": "^6.7.0",
     "husky": "^3.0.9",
     "lerna": "^3.18.4",
