--- a/packages/eslint-config-vtex/package.json
+++ b/packages/eslint-config-vtex/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-vtex",
-  "version": "11.2.1",
+  "version": "12.0.0",
   "description": "VTEX's eslint config",
   "main": "index.js",
   "scripts": {
@@ -16,8 +16,8 @@
     "config",
     "vtex"
   ],
-  "author": "Breno Calazans",
   "contributors": [
+    "Breno Calazans <breno@vtex.com.br>",
     "Christian Kaisermann <christian.andrade@vtex.com.br>"
   ],
   "license": "MIT",
@@ -40,7 +40,7 @@
     "@vtex/prettier-config": "^0.0.1",
     "eslint": "^6.8.0",
     "prettier": "^1.18.2",
-    "typescript": "^3.6.2"
+    "typescript": "^3.7.5"
   },
   "peerDependencies": {
     "eslint": "^6.8.0",
