--- a/packages/eslint-config-vtex-react/package.json
+++ b/packages/eslint-config-vtex-react/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/vtex/eslint-config-vtex-react.git"
+    "url": "git+https://github.com/vtex/javascript.git"
   },
   "files": [
     "index.js"
@@ -20,15 +20,15 @@
     "vtex",
     "react"
   ],
-  "author": "Breno Calazans",
   "contributors": [
+    "Breno Calazans <breno@vtex.com.br>",
     "Christian Kaisermann <christian.andrade@vtex.com.br>"
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/brenoc/eslint-config-vtex-react/issues"
+    "url": "https://github.com/vtex/javascript/issues"
   },
-  "homepage": "https://github.com/brenoc/eslint-config-vtex-react#readme",
+  "homepage": "https://github.com/vtex/javascript#readme",
   "dependencies": {
     "eslint-config-vtex": "^11.2.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
