chore: 🤖 remove markdown formatting

--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
       "eslint --fix",
       "prettier --write"
     ],
-    "*{json,md}": [
+    "*.json": [
       "prettier --write"
     ]
   },
   "scripts": {
     "build": "lerna run build",
     "clean": "lerna clean && lerna run clean",
-    "format:check": "prettier --list-different \"./**/*.{ts,js,json,md}\"",
-    "format": "prettier --write \"./**/*.{ts,js,json,md}\"",
-    "lint": "eslint . --ext .js,.ts",
+    "format:check": "prettier --list-different \"./**/*.{ts,js,json}\"",
+    "format": "prettier --write \"./**/*.{ts,js,json}\"",
+    "lint": "eslint . --ext .js,.ts,.jsx,.tsx",
     "lint:fix": "eslint . --ext .js,.ts --fix",
     "test": "lerna run test --concurrency 1",
     "postinstall": "lerna bootstrap && yarn build && lerna link"
