feat: 🎸 add eslint-plugin-vtex

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build": "lerna run build",
     "clean": "lerna clean && lerna run clean",
     "format:check": "prettier --list-different \"./**/*.{ts,js,json}\"",
-    "format": "prettier --write \"./**/*.{ts,js,json}\"",
+    "format": "prettier --write \"**/*.{ts,js,json}\"",
     "lint": "eslint . --ext .js,.ts,.jsx,.tsx",
     "lint:fix": "eslint . --ext .js,.ts --fix",
     "test": "lerna run test --concurrency 1",
