--- a/packages/eslint-plugin-vtex/package.json
+++ b/packages/eslint-plugin-vtex/package.json
@@ -12,7 +12,6 @@
     "Christian Kaisermann <christian.andrade@vtex.com.br>"
   ],
   "scripts": {
-    "check": "yarn run lint && yarn test",
     "test": "jest"
   },
   "license": "MIT",
@@ -23,14 +22,12 @@
   "repository": "https://github.com/vtex/javascript",
   "jest": {
     "testPathIgnorePatterns": [
-      "/node_modules/",
-      "/fixtures"
+      "/node_modules/"
     ],
     "collectCoverage": false
   },
   "devDependencies": {
-    "jest": "^24.8.0",
-    "typescript": "^3.6.4"
+    "jest": "^24.8.0"
   },
   "peerDependencies": {
     "eslint": "^6.0.0"
