--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -17,6 +17,9 @@
   "files": [
     "index.js"
   ],
+  "scripts": {
+    "postversion": "chan release $npm_package_version && git add CHANGELOG.md"
+  },
   "peerDependencies": {
     "prettier": "^1.19.1"
   }
