--- a/packages/eslint-config-vtex/package.json
+++ b/packages/eslint-config-vtex/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "eslint-check": "eslint --print-config index.js | eslint-config-prettier-check",
-    "dump-config": "eslint --print-config index.js > config-dump.json"
+    "dump-config": "eslint --print-config index.js > config-dump.json",
+    "postversion": "chan release $npm_package_version && git add CHANGELOG.md"
   },
   "repository": {
     "type": "git",
