fix: 🐛 missing files in final packages

--- a/packages/eslint-config-vtex/package.json
+++ b/packages/eslint-config-vtex/package.json
@@ -27,7 +27,8 @@
   },
   "homepage": "https://github.com/vtex/javascript#readme",
   "files": [
-    "index.js"
+    "index.js",
+    "rules/"
   ],
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^2.17.0",
