--- a/packages/eslint-config-vtex-react/package.json
+++ b/packages/eslint-config-vtex-react/package.json
@@ -13,7 +13,8 @@
     "url": "git+https://github.com/vtex/javascript.git"
   },
   "files": [
-    "index.js"
+    "index.js",
+    "rules/"
   ],
   "keywords": [
     "eslint",
