--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -7,7 +7,7 @@
   "main": "tsconfig.json",
   "license": "MIT",
   "scripts": {
-    "postversion": "chan release $npm_package_version && git add CHANGELOG.md"
+    "postversion": "chan release $npm_package_version && git add CHANGELOG.md && git commit --amend --no-edit"
   },
   "peerDependencies": {
     "typescript": "^3.7.5"
