--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -18,7 +18,7 @@
     "index.js"
   ],
   "scripts": {
-    "postversion": "chan release $npm_package_version && git add CHANGELOG.md"
+    "postversion": "chan release $npm_package_version && git add CHANGELOG.md && git commit --amend --no-edit"
   },
   "peerDependencies": {
     "prettier": "^1.19.1"
