--- a/packages/eslint-plugin-vtex/package.json
+++ b/packages/eslint-plugin-vtex/package.json
@@ -23,7 +23,7 @@
   ],
   "scripts": {
     "test": "jest",
-    "postversion": "chan release $npm_package_version && git add CHANGELOG.md && git commit --amend --no-edit"
+    "version": "chan release $npm_package_version && git add CHANGELOG.md && git commit --amend --no-edit"
   },
   "jest": {
     "testPathIgnorePatterns": [
