--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "postinstall": "lerna bootstrap && yarn build && lerna link"
   },
   "devDependencies": {
+    "@geut/chan": "^2.1.1",
     "eslint": "^6.7.0",
     "husky": "^4.2.0",
     "lerna": "^3.18.4",
