--- a/packages/eslint-config-vtex/package.json
+++ b/packages/eslint-config-vtex/package.json
@@ -35,7 +35,9 @@
     "@typescript-eslint/parser": "^2.17.0",
     "confusing-browser-globals": "^1.0.9",
     "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-cypress": "^2.9.0",
     "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-jest": "^23.7.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-vtex": "^1.0.3"
   },
