--- a/packages/eslint-config-vtex-react/package.json
+++ b/packages/eslint-config-vtex-react/package.json
@@ -41,12 +41,12 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "prettier": "^1.18.2",
+    "prettier": "^1.18.2 || ^2.0.4",
     "typescript": "^3.5.3"
   },
   "peerDependencies": {
     "eslint": "^6.8.0",
-    "prettier": "^1.19.1",
+    "prettier": "^1.18.2 || ^2.0.4",
     "typescript": "^3.7.5"
   }
 }
