--- a/packages/eslint-config-vtex/package.json
+++ b/packages/eslint-config-vtex/package.json
@@ -49,7 +49,7 @@
   },
   "peerDependencies": {
     "eslint": "^6.8.0",
-    "prettier": "^1.19.1",
+    "prettier": "^1.18.2 || ^2.0.4",
     "typescript": "^3.7.5"
   }
 }
