--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -21,6 +21,6 @@
     "version": "chan release $npm_package_version && git add CHANGELOG.md"
   },
   "peerDependencies": {
-    "prettier": "^1.19.1"
+    "prettier": "^1.18.2 || ^2.0.4"
   }
 }
