--- a/packages/eslint-config-vtex-react/package.json
+++ b/packages/eslint-config-vtex-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-vtex-react",
-  "version": "6.4.0",
+  "version": "6.5.0",
   "description": "VTEX's eslint config for React",
   "main": "index.js",
   "scripts": {
@@ -34,19 +34,19 @@
   },
   "homepage": "https://github.com/vtex/javascript#readme",
   "dependencies": {
-    "eslint-config-vtex": "^12.4.0",
+    "eslint-config-vtex": "^12.5.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^2.3.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "prettier": "^1.18.2",
+    "prettier": "^1.18.2 || ^2.0.4",
     "typescript": "^3.5.3"
   },
   "peerDependencies": {
     "eslint": "^6.8.0",
-    "prettier": "^1.19.1",
+    "prettier": "^1.18.2 || ^2.0.4",
     "typescript": "^3.7.5"
   }
 }
