--- a/packages/eslint-config-vtex/package.json
+++ b/packages/eslint-config-vtex/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-vtex",
-  "version": "12.4.0",
+  "version": "12.5.0",
   "description": "VTEX's eslint config",
   "main": "index.js",
   "scripts": {
@@ -42,14 +42,14 @@
     "eslint-plugin-vtex": "^1.1.0"
   },
   "devDependencies": {
-    "@vtex/prettier-config": "^0.2.0",
+    "@vtex/prettier-config": "^0.3.0",
     "eslint": "^6.8.0",
     "prettier": "^1.18.2",
     "typescript": "^3.7.5"
   },
   "peerDependencies": {
     "eslint": "^6.8.0",
-    "prettier": "^1.19.1",
+    "prettier": "^1.18.2 || ^2.0.4",
     "typescript": "^3.7.5"
   }
 }
