--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vtex/prettier-config",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "VTEX shared prettier config",
   "publishConfig": {
     "access": "public"
@@ -21,6 +21,6 @@
     "version": "chan release $npm_package_version && git add CHANGELOG.md"
   },
   "peerDependencies": {
-    "prettier": "^1.19.1"
+    "prettier": "^1.18.2 || ^2.0.4"
   }
 }
