--- a/packages/eslint-config-vtex/package.json
+++ b/packages/eslint-config-vtex/package.json
@@ -28,7 +28,8 @@
   "homepage": "https://github.com/vtex/javascript#readme",
   "files": [
     "index.js",
-    "rules/"
+    "rules/",
+    "lib/"
   ],
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^3.8.0",
