--- a/packages/eslint-config-vtex-react/package.json
+++ b/packages/eslint-config-vtex-react/package.json
@@ -35,9 +35,9 @@
   "homepage": "https://github.com/vtex/javascript#readme",
   "dependencies": {
     "eslint-config-vtex": "^12.8.4",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.18.0",
-    "eslint-plugin-react-hooks": "^2.3.0"
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
@@ -45,8 +45,8 @@
     "typescript": "^3.5.3"
   },
   "peerDependencies": {
-    "eslint": "^6.8.0",
+    "eslint": "^6.0.0 || ^7.0.0",
     "prettier": "^1.18.2 || ^2.0.4",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5 || ^4.0.0"
   }
 }
