--- a/packages/eslint-config-vtex/package.json
+++ b/packages/eslint-config-vtex/package.json
@@ -32,14 +32,14 @@
     "lib/"
   ],
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.8.0",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.8.0",
     "confusing-browser-globals": "^1.0.9",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-plugin-cypress": "^2.9.0",
-    "eslint-plugin-import": "^2.20.0",
-    "eslint-plugin-jest": "^23.7.0",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-cypress": "^2.11.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^23.20.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vtex": "^2.0.1"
   },
   "devDependencies": {
@@ -49,8 +49,8 @@
     "typescript": "^3.7.5"
   },
   "peerDependencies": {
-    "eslint": "^6.8.0",
+    "eslint": "^6.0.0 || ^7.0.0",
     "prettier": "^1.18.2 || ^2.0.4",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5 || ^4.0.0"
   }
 }
