--- a/lerna.json
+++ b/lerna.json
@@ -3,6 +3,7 @@
   "npmClient": "yarn",
   "useWorkspaces": true,
   "stream": true,
+  "packages": ["packages/*"],
   "command": {
     "publish": {
       "ignoreChanges": [
