chore(release): :robot: publish v%s
 - eslint-config-vtex-react@6.8.3
 - eslint-config-vtex@12.8.11

--- a/packages/eslint-config-vtex/package.json
+++ b/packages/eslint-config-vtex/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-vtex",
-  "version": "12.8.11-alpha.0",
+  "version": "12.8.11",
   "description": "VTEX's eslint config",
   "main": "index.js",
   "scripts": {
