--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "clean": "lerna clean && lerna run clean",
     "format:check": "prettier --list-different \"./**/*.{ts,js,json}\"",
     "format": "prettier --write \"**/*.{ts,js,json}\"",
-    "lint": "eslint . --ext .js,.ts,.jsx,.tsx",
-    "lint:fix": "eslint . --ext .js,.ts --fix",
+    "lint": "eslint --ext .js,.ts,.jsx,.tsx .",
     "test": "lerna run test --concurrency 1"
   },
   "prettier": "@vtex/prettier-config",
@@ -39,11 +38,11 @@
   },
   "devDependencies": {
     "@geut/chan": "^2.1.1",
-    "eslint": "^6.7.0",
-    "husky": "^4.2.0",
+    "eslint": "^7.14.0",
+    "husky": "^4.3.0",
     "lerna": "^3.18.4",
-    "lint-staged": "^10.0.2",
-    "prettier": "^1.19.1",
-    "typescript": "^3.7.5"
+    "lint-staged": "^10.5.2",
+    "prettier": "^2.2.0",
+    "typescript": "^3.8"
   }
 }
