--- a/packages/eslint-config-vtex-react/demo/package.json
+++ b/packages/eslint-config-vtex-react/demo/package.json
@@ -3,8 +3,9 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "prettier": "^1.19.1",
-    "typescript": "^3.7.5"
+    "@types/react": "^17.0.0"
+  },
+  "dependencies": {
+    "react": "^17.0.1"
   }
 }
