--- a/packages/eslint-config-vtex/package.json
+++ b/packages/eslint-config-vtex/package.json
@@ -4,8 +4,8 @@
   "description": "VTEX's eslint config",
   "main": "index.js",
   "scripts": {
-    "eslint-check": "eslint --print-config index.js | eslint-config-prettier-check",
-    "dump-config": "eslint --print-config index.js > config-dump.json",
+    "eslint-check": "eslint-config-prettier index.js",
+    "dump-config": "eslint-config-prettier index.js > config-dump.json",
     "version": "chan release $npm_package_version && git add CHANGELOG.md"
   },
   "keywords": [
@@ -33,19 +33,19 @@
     "lib/"
   ],
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
-    "confusing-browser-globals": "^1.0.9",
-    "eslint-config-prettier": "^6.15.0",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
+    "confusing-browser-globals": "^1.0.10",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vtex": "^2.0.11"
   },
   "peerDependencies": {
-    "eslint": "^6 || ^7",
+    "eslint": "^7",
     "prettier": "^1 || ^2",
     "typescript": "^3 || ^4"
   }
