--- a/packages/eslint-config-vtex/package.json
+++ b/packages/eslint-config-vtex/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-vtex",
-  "version": "14.0.0",
+  "version": "14.0.1-beta.0",
   "description": "VTEX's eslint config",
   "main": "index.js",
   "scripts": {
@@ -42,7 +42,7 @@
     "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vtex": "^2.0.11"
+    "eslint-plugin-vtex": "^2.0.12-beta.0"
   },
   "peerDependencies": {
     "eslint": "^7",
