--- a/packages/eslint-config-vtex-react/package.json
+++ b/packages/eslint-config-vtex-react/package.json
@@ -36,6 +36,7 @@
     "directory": "packages/eslint-config-vtex-react"
   },
   "dependencies": {
+    "@vtex/eslint-plugin-admin-ui": "^0.2.9",
     "eslint-config-vtex": "^14.1.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.6",
