--- a/packages/eslint-config-vtex-react/package.json
+++ b/packages/eslint-config-vtex-react/package.json
@@ -43,7 +43,7 @@
     "eslint-plugin-react-hooks": "^4.1.0"
   },
   "peerDependencies": {
-    "eslint": "^7",
+    "eslint": "^7 || ^8",
     "prettier": "^1.18.2 || ^2.0.4",
     "typescript": "^3.8 || ^4.0.0"
   }
