Add missing install step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,11 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '14'
-      - run: yarn && yarn lint
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+
+      - name: Run lint
+        run: yarn lint
 
   Test:
     runs-on: ubuntu-latest
@@ -24,6 +28,9 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '14'
+
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
 
       - name: Verdaccio login
         run: |
