--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,13 @@ jobs:
           git config --global user.name 'Verdaccio User'
           git config --global user.email 'username@email.com'
 
+      - name: Get changed packages
+        id: changed-packages
+        run: |
+          changed_packages=$(yarn -s lerna list --since | sed 's/$/\@0.0.0-verdaccio/')
+
+          echo "::set-output name=PACKAGES::$changed_packages"
+
       - name: Publish packages
         run: |
           yarn lerna publish \
@@ -56,5 +63,5 @@ jobs:
 
       - name: Install packages and run test
         run: |
-          yarn -s lerna list | sed 's/$/\@0.0.0-verdaccio/' | xargs yarn --cwd fixtures/app add -D
+          yarn --cwd fixtures/app add -D ${{ steps.changed-packages.outputs.PACKAGES }}
           yarn --cwd fixtures/app test
