--- a/fixtures/app/package.json
+++ b/fixtures/app/package.json
@@ -13,5 +13,9 @@
     "eslint-config-vtex-react": "^8.2.1",
     "prettier": "^2.5.1",
     "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
