--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Get changed packages
         id: changed-packages
         run: |
-          changed_packages=$(yarn -s lerna list --since | sed 's/$/\@0.0.0-verdaccio/')
+          changed_packages=$(yarn -s lerna list --since | sed 's/$/\@0.0.0-verdaccio/' | xargs echo)
 
           echo "::set-output name=PACKAGES::$changed_packages"
 
