Always use latest version for packages

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Install dependencies
         run: |
           yarn install --frozen-lockfile
-          yarn --cwd fixtures/app install --frozen-lockfile
+          yarn --cwd fixtures/app install --no-lockfile
 
       - name: Verdaccio login
         run: |
