--- a/fixtures/app/package.json
+++ b/fixtures/app/package.json
@@ -7,10 +7,10 @@
     "test": "eslint --ext js,ts,jsx,tsx,mjs ."
   },
   "devDependencies": {
-    "@vtex/prettier-config": "^1.0.0",
+    "@vtex/prettier-config": "*",
     "eslint": "^7",
-    "eslint-config-vtex": "^14.1.2",
-    "eslint-config-vtex-react": "^8.2.1",
+    "eslint-config-vtex": "*",
+    "eslint-config-vtex-react": "*",
     "prettier": "^2.5.1",
     "typescript": "^4.6.2"
   },
