Update workflow name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Run lint
         run: yarn lint
 
-  Test:
+  'E2E_Tests':
     runs-on: ubuntu-latest
     services:
       verdaccio:
