fix(lerna): set registry on lerna.json

--- a/lerna.json
+++ b/lerna.json
@@ -11,7 +11,8 @@
         "LICENSE",
         "lerna.json"
       ],
-      "message": "chore(release): :robot: publish"
+      "message": "chore(release): :robot: publish",
+      "registry": "https://registry.npmjs.org"
     }
   }
 }
