--- a/packages/eslint-plugin-vtex/package.json
+++ b/packages/eslint-plugin-vtex/package.json
@@ -2,10 +2,12 @@
   "name": "eslint-plugin-vtex",
   "version": "2.2.1",
   "description": "VTEX's ESLint plugin",
-  "main": "index.js",
+  "main": "dist/eslint-plugin-vtex.cjs.js",
+  "module": "dist/eslint-plugin-vtex.esm.js",
+  "types": "dist/eslint-plugin-vtex.cjs.d.ts",
   "files": [
-    "index.js",
-    "lib/"
+    "docs",
+    "dist"
   ],
   "license": "MIT",
   "bugs": {
@@ -18,7 +20,8 @@
     "directory": "packages/eslint-plugin-vtex"
   },
   "contributors": [
-    "Christian Kaisermann <christian.andrade@vtex.com.br>"
+    "Christian Kaisermann <christian.andrade@vtex.com.br>",
+    "Gabriel Takashi Katakura <gabriel.katakura@vtex.com.br>"
   ],
   "keywords": [
     "eslint",
@@ -26,19 +29,40 @@
     "vtex"
   ],
   "scripts": {
+    "version": "chan release $npm_package_version && git add CHANGELOG.md",
+    "watch": "tsdx watch",
+    "build": "tsdx build",
     "test": "jest",
-    "version": "chan release $npm_package_version && git add CHANGELOG.md"
+    "lint": "tsdx lint",
+    "prepare": "tsdx build"
   },
   "jest": {
+    "transform": {
+      "\\.(js|ts)$": [
+        "babel-jest",
+        {
+          "configFile": "./test/babel.config.js"
+        }
+      ]
+    },
     "testPathIgnorePatterns": [
       "/node_modules/"
     ],
     "collectCoverage": false
   },
+  "dependencies": {
+    "@typescript-eslint/utils": "^5.15.0"
+  },
   "devDependencies": {
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-typescript": "^7.24.1",
+    "@types/eslint": "^8.56.10",
     "@typescript-eslint/experimental-utils": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
-    "jest": "^27.5.1"
+    "babel-jest": "^29.7.0",
+    "jest": "^27.5.1",
+    "tsdx": "^0.14.1"
   },
   "peerDependencies": {
     "eslint": "^6 || ^7 || ^8"
