chore(release): :robot: publish
 - eslint-config-vtex-react@9.0.4-alpha.0
 - eslint-config-vtex@15.0.3-alpha.0
 - eslint-plugin-vtex@2.2.2-alpha.0

--- a/packages/eslint-plugin-vtex/package.json
+++ b/packages/eslint-plugin-vtex/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-vtex",
-  "version": "2.2.1",
+  "version": "2.2.2-alpha.0",
   "description": "VTEX's ESLint plugin",
   "main": "dist/eslint-plugin-vtex.cjs.js",
   "module": "dist/eslint-plugin-vtex.esm.js",
