--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,12 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
-          node-version: '14'
+          node-version: '18'
       - name: Install dependencies
         run: yarn install --frozen-lockfile
+
+      - name: Run build
+        run: yarn build
 
       - name: Run lint
         run: yarn lint
@@ -33,12 +36,10 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
-          node-version: '14'
+          node-version: '18'
 
       - name: Install dependencies
-        run: |
-          yarn install --frozen-lockfile
-          yarn --cwd fixtures/app install --no-lockfile
+        run: yarn install --frozen-lockfile
 
       - name: Verdaccio login
         run: |
@@ -68,6 +69,13 @@ jobs:
             --no-git-tag-version \
             --no-push \
             --yes
+
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '14'
+
+      - name: Install dependencies
+        run: yarn --cwd fixtures/app install --no-lockfile
 
       - name: Install packages and run test
         if: steps.changed-packages.outputs.PACKAGES
